# dd-generator

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.cpp
main/AP/: AP.cpp  AP.h
main/ESP_NOW/: ESP_NOW.cpp  ESP_NOW.h
main/Generator/: Generator.cpp  Generator.h
main/HTML/: index.html  script.js  style.css
main/HTTP_Server/: HTTP_Server.cpp  HTTP_Server.h
main/NVS/: NVS.cpp  NVS.h
main/Resolvers/: MACResolving.cpp  MACResolving.h
main/Shared_data/: SharedData.cpp  SharedData.h
