idf_component_register(SRCS "main.cpp"
    "HTTP_Server/HTTP_Server.cpp"
    "AP/AP.cpp"
    "NVS/NVS.cpp"
    "Resolvers/MACResolving.cpp"
    "ESP_NOW/ESP_NOW.cpp"
    "Generator/Generator.cpp"
    EMBED_FILES "HTML/index.html"
    "HTML/script.js"
    "HTML/style.css"
    "HTML/favicon.ico"
    INCLUDE_DIRS "")
